integrated the services api

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1 "
     />
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
-    <title>BirthSales</title>
+    <title>Birthnon</title>
   </head>
   <body>
     <div id="root"></div>
